# yupay

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_ES.md  VERSIONING.md  main.py  pyproject.toml  requirements.txt  verify_seasonality.py
config/: defaults.yaml  main.yaml
config/domains/inventory/: main.yaml
config/domains/sales/: main.yaml  seasonality.yaml
config/domains/sales/catalogs/: products.yaml
config/locales/es_PE/: names.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  USER_MANUAL.md  USER_MANUAL_ES.md  project_structure.md
docs/releases/: v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.4.0.md
src/tools/: verify_chaos.py
src/yupay/: cli.py
src/yupay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/yupay/core/: chaos.py  entropy.py  erp.py  estimator.py  filesystem.py  generator.py  i18n.py  random.py  registry.py  settings.py  sink.py  system.py  temporal.py  time.py
src/yupay/domains/inventory/: movements.py
src/yupay/domains/sales/: customers.py  handler.py  orders.py  products.py  stores.py
src/yupay/domains/sales/inventory/: movements.py  suppliers.py
src/yupay/locales/: messages.pot
src/yupay/locales/en/LC_MESSAGES/: messages.mo  messages.po
src/yupay/locales/es/LC_MESSAGES/: messages.mo  messages.po
src/yupay/sinks/: definitions.py
src/yupay/utils/: files.py
tests/: conftest.py  test_cli_smoke.py  test_entropy_seeds.py
yupay/: cli.py
yupay/config/: defaults.yaml
yupay/config/domains/sales/: main.yaml
yupay/config/domains/sales/catalogs/: products.yaml
yupay/core/: dataset.py  random.py  settings.py  sink.py  system.py  time.py
yupay/domains/sales/: customers.py  orders.py  products.py
yupay/sinks/: definitions.py
