[project]
name = "yupay"
version = "0.1.0"
description = "Realistic synthetic ERP data generator using Polars"
authors = [{ name = "Manuel Vasquez" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.14.1"
dependencies = [
    "polars==1.37.1",
    "pyyaml==6.0.2",
    "click==8.1.7",
    "pydantic==2.7.0",
    "psutil==5.9.8",
    "rich==13.7.0",
    "duckdb==0.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "babel"]

[project.scripts]
yupay = "yupay.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
