[project]
name = "yupay"
version = "1.0.0"
description = "Realistic synthetic ERP data generator using Polars"
authors = [{ name = "Manuel Vasquez" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.14.1"
dependencies = [
    "polars==1.37.1",
    "pyyaml==6.0.2",
    "click==8.3.1",
    "pydantic==2.7.0",
    "rich==14.3.1",
    "duckdb==1.4.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "babel"]

[project.scripts]
yupay = "yupay.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
