[project]
name = "yupay"
version = "1.3.0"
description = "Realistic synthetic ERP data generator using Polars"
authors = [{ name = "Manuel Vasquez" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.13.12"
dependencies = [
    "polars==1.37.1",
    "pyyaml==6.0.2",
    "click==8.3.1",
    "rich==14.3.1",
    "duckdb==1.4.4",
    "psutil==7.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "babel"]

[project.scripts]
yupay = "yupay.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
